--- a/CSS_advanced/styles/13-style.css
+++ b/CSS_advanced/styles/13-style.css
@@ -8,11 +8,22 @@ h1, h2, h3, h4, h5, h6{
     font-family: var(--font-family-title);
     font-weight: var(--font-weight-bold);
 }
-a{
+a:link{
     color: var(--text-color);
     text-decoration: none;
 }
 
+a:visited{
+    font-style: italic;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+a:active{
+    background-color: var(--color-light-grey);
+}
 .section-header{
     text-align: var(--section-header-align);
 }
@@ -72,3 +83,10 @@ body{
     font-weight: var(--font-weight-regular);
     line-height: var(--line-height-base);
 }
+
+
+
+
+
+
+
