--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -40,7 +40,7 @@ a:active{
 }
 
 .section-body{
-    padding: var(--section-footer-padding);
+    padding: var(--section-body-padding);
 }
 
 .section-footer{
