--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -116,7 +116,7 @@ a:active{
     --nav-item-link-hover: var(--color-primary);
 }
 
-.nav-menu{
+.navbar-menu{
     float: right;
 }
 .nav{
@@ -129,6 +129,7 @@ a:active{
 .nav.nav-item{
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
+    font-size: var(--nav-item-font-size);
     letter-spacing: var(--nav-item-letter-spacing);
     display: var(--nav-item-display);
     margin: var(--nav-item-margin);
