--- a/CSS_advanced/styles/27-style.css
+++ b/CSS_advanced/styles/27-style.css
@@ -273,7 +273,7 @@ ul.row {
     background-size: 90rem auto;
 }
 .section-hero .section-title{
-    margin: 5rem;
+    margin-bottom: 5rem;
 }
 
 .section-hero .section-inner{
