--- a/sass_scss/3-nested_tag.scss
+++ b/sass_scss/3-nested_tag.scss
@@ -1,9 +1,6 @@
 // styles.scss
-$margin: 0px;
-$padding: 0px;
-$margin2: 10px;
 body {
-    margin: $margin;
-    padding: $padding; }
+    margin: 0px;
+    padding: 0px; }
     body p {
-      margin: $margin2; }
+      margin: 10px; }
