--- a/sass_scss/4-nested_class.scss
+++ b/sass_scss/4-nested_class.scss
@@ -1,7 +1,7 @@
 // Nested class
-$color: #3D3D3D;
+
 body {
-    color: $color; }
-    $red: #FF0000;
+    color: #3D3D3D; }
+    
     .red {
-      color: $red; }
+      color: #FF0000; }
