--- a/sass_scss/5-nested_child.scss
+++ b/sass_scss/5-nested_child.scss
@@ -1,5 +1,11 @@
 // Nested child
+
 body {
-    color: #3D3D3D; }
-          >.red {
-      color: #FF0000; }
+    color: #3D3D3D;
+  
+    
+    >.red {
+      color: #FF0000;
+    }
+  }
+  
