--- a/sass_scss/12-loop_header.scss
+++ b/sass_scss/12-loop_header.scss
@@ -1,10 +1,6 @@
-// Loop Headers
-$header-list: h1, h2, h3, h4, h5;
-$font-size: 1px;
-
-@for $i from 1 through length($header-list) {
-  $header: nth($header-list, $i);
-  #{$header} {
-    font-size: $i * $font-size;
-  }
+/*  Loop Headers */
+@for $i from 0 to 5 {
+    h#{$i + 1} {
+        font-size: $i + 1px;
+    }
 }
