--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -376,7 +376,7 @@
   }
 
   /* Section Latest news ============================= */
-  .section-lasted-news .row {
+  .section-latest-news .row {
     flex-direction: row-reverse;
   }
   
