--- a/flexbox/9-styles.css
+++ b/flexbox/9-styles.css
@@ -384,8 +384,9 @@
     flex-wrap: wrap;
   }
 
-  /* Section ABOUT US*/
-  .section-about-us [class^="col-"] {
+  /* Section ABOUT US =============== */
+
+  .section-about-us [class^='col-'] {
     align-self: center;
   }
   /*** 4. CARD ***/
