--- a/flexbox/13-styles.css
+++ b/flexbox/13-styles.css
@@ -607,7 +607,7 @@
         list-style: none;
     }
 
-    .tag-list .li {
+    .tag-list li {
         display: inline;
     }
     .tag-list li::after {
@@ -615,6 +615,6 @@
       }
       
       .tag-list li:last-child::after {
-        content: none;
+        content: "";
       }
       
