--- a/form/01-styles.css
+++ b/form/01-styles.css
@@ -1,3 +1,4 @@
+
 /* SUMMARY
     1. GLOBAL
     2. LAYOUT
@@ -646,24 +647,26 @@
     content: "";
   }
 
-  /*** FORM ***/
+/*** FORM ***/
 /* Comment section
     ============================= */
 
-    .post-comments {
-        width: 80%;
-        margin: 10rem 0 0 auto;
-        padding-left: 7rem;
+  .post-comments {
+    width: 80%;
+    margin: 10rem 0 0 auto;
+    padding-left: 7rem;
+  }
 
-    }
-    .post-comments .section-title {
-        font-variant: small-caps;
-    }
-/* Basic form
+  .post-comments .section-title {
+    font-variant: small-caps;
+  }
+
+  /* Basic form
     ============================= */
-    .form {
-        display: flex;
-        flex-direction: column;
-        padding: 1rem 0;
-        margin: 0;
-    }
+  
+  form {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 0;
+    margin: 0;
+  }
