--- a/form/04-styles.css
+++ b/form/04-styles.css
@@ -688,7 +688,7 @@
 
   }
 
-  input[type="text"], input[type="email"], textarea{
+  input[type=text], input[type=email], textarea{
     position: relative;
     width: 100%;
     padding: 1.2rem;
@@ -699,18 +699,16 @@
     outline: 0;
   }
 
-  input[type="text"], input[type="email"]{
+  input[type=text], input[type=email]{
     padding-right: 3rem;
   }
 
-  input[type="text"], input[type="email"], textarea{
+  input[type=text]:focus, input[type=email]:focus, textarea:focus{
     border: .1rem solid var(--color-grey);
     background-color: var(--color-light-grey);
   }
 
-  input[type="text"]::placeholder,
-  input[type="email"]::placeholder,
-  textarea::placeholder {
-  font-style: italic;
-  font-size: var(--font-size-small);
-}
+  ::placeholder {
+    font-style: italic;
+    font-size: var(--font-size-small);
+  }
