--- a/form/ 05-styles.css
+++ b/form/ 05-styles.css
@@ -685,10 +685,9 @@
     white-space: nowrap;
     font-size: 1.4rem;
     padding: 0 0 .5rem;
-
   }
 
-  input[type=text], input[type=email], textarea{
+  input[type=text], input[type=email], textarea {
     position: relative;
     width: 100%;
     padding: 1.2rem;
@@ -699,11 +698,11 @@
     outline: 0;
   }
 
-  input[type=text], input[type=email]{
+  input[type=text], input[type=email] {
     padding-right: 3rem;
   }
 
-  input[type=text]:focus, input[type=email]:focus, textarea:focus{
+  input[type=text]:focus, input[type=email]:focus, textarea:focus {
     border: .1rem solid var(--color-grey);
     background-color: var(--color-light-grey);
   }
@@ -713,44 +712,45 @@
     font-size: var(--font-size-small);
   }
 
-  /* Form group
+/* Form group
 ============================= */
 
- .form-group {
-    padding: 1rem;
-    margin: 0;
-    background-color: var(--color-white);
-
- }
- .form-group:focus-within{
-    background-color: var(--color-light-grey);
-    transition: .3s;
- }
-
- /* Form field
-============================= */
-.form-field-container {
-    position: relative;
+.form-group {
+  padding: 1rem;
+  margin: 0;
+  background-color: var(--color-white);
 }
 
-.form-field-icon{
-    font-style: normal;
+.form-group:focus-within {
+  background-color: var(--color-light-grey);
+  transition: .3s;
+}
+
+/* Form field
+============================= */
+.form-field-container {
+  position: relative;
+}
+
+.form-field-icon {
+  font-style: normal;
 }
 
 /* Form help
 ============================= */
+
 .form-group .form-help {
-    margin: 0;
-    line-height: 1.3;
-    letter-spacing: .019rem;
-    color: var(--color-dark-grey);
-    font-size: var(--font-size-small);
-    max-height: 0;
-    transition: .3s;
-    overflow: hidden;
+  margin: 0;
+  line-height: 1.3;
+  letter-spacing: .019rem;
+  color: var(--color-dark-grey);
+  font-size: var(--font-size-small);
+  max-height: 0;
+  transition: .3s;
+  overflow: hidden;
 }
 
 .form-group:focus-within .form-help {
-    max-height: 20rem;
-    margin: 0.4rem 0 0;
+  max-height: 20rem;
+  margin: .4rem 0 0;
 }
