--- a/accessibility/keyboard/01-styles.css
+++ b/accessibility/keyboard/01-styles.css
@@ -690,6 +690,9 @@
     background-color: rgba(0, 0, 0, 0.7);
 }
   
+.card-work:hover .card-inner {
+    background-color: transparent;
+  }
   
   @media only screen and (max-width: 767px) {
   
